...

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/pelicula"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="151dp"
...

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textView_nombrePelicula"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/nombre_pelicula"
                        android:textSize="18sp"
                        android:textStyle="bold" />
...

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/sinopsis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_sinopsis"
...

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/sinopsisContentPeli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:text="@string/sinopsis_contenido"
...
