...
    <string name="numero_de_movil_email_hint">Número de móvil o Email</string>
    <string name="numero_de_movil_hint">Número de móvil</string>
    <string name="nombre_apellidos_hint">Nombre y apellidos</string>
    <string name="nombre_app">Fandomovies</string>
    <string name="registrate_boton">¿No tienes una cuenta? Regístrate.</string>
    <string name="iniciadoCorrecto">Ha iniciado sesión.</string>
    <string name="peliculas">Peliculas</string>
    <string name="credencialesIncorrectasTitle">Credenciales incorrectas</string>
    <string name="credencialesIncorrectas">Los datos que ha introducido no son correctos o la cuenta no existe</string>
    <string name="camposporRellenarTitle">Faltan campos por rellenar</string>
    <string name="camposporRellenar">Rellene todos los campos para poder registrarse</string>
    <string name="emailYaEnUsoTitle">Email en uso</string>
    <string name="emailYaEnUso">Esta dirección de email ya está en uso</string>
...
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="menu">Menú</string>
    <string name="serie">SERIE</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
...
